--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: P2C2M.GMYC
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Model violations under the Generalized Mixed Yule Coalescent (GMYC)
+Version: 1.0
+Author: Emanuel M. Fonseca, Drew J. Duckett, Bryan C. Carstens
+Maintainer: Emanuel M. Fonseca <emanuelmfonseca@gmail.com>
+Description: P2C2M.GMYC was designed to assess the statistical fit of the GMYC model to a user-supplied data set consisting of DNA sequence data from some number of samples representing an unknown number of species. The package implements two strategies for assessing the statistical fit of empirical data to the GMYC model: a parametric bootstrap for the likelihood framework and a posterior predictive simulation (PPS) for the Bayesian framework.
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
