--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,4 @@ Description: P2C2M.GMYC was designed to assess the statistical fit of the GMYC m
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.0
